## This file is used to produce the Makefile.in for this directory
## This directory is used to build iClaustron API towards Cluster Server
##

lib_LTLIBRARIES = libic_apic.la

libic_apic_la_SOURCES = ic_apic.c
libic_apic_la_LIBADD = $(LDADD) ../comm/libic_comm.la \
                                ../port/libic_port.la
