## This file is used to produce the Makefile.in for this directory
## This directory is used to build iClaustron API towards Data Server
##

lib_LTLIBRARIES = libic_apid.la

libic_apid_la_SOURCES = ic_apid.c
libic_apid_la_LIBADD = $(LDADD) ../comm/libic_comm.la \
                                ../port/libic_port.la
