## Copyright (C) 2007-2009 iClaustron AB
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; version 2 of the License.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

include_HEADERS = ic_apic.h \
                  ic_apid.h \
                  ic_apid_datatypes.h \
                  ic_apid_hidden.h \
                  ic_apid_inline.h \
                  ic_base_header.h \
                  ic_connection.h \
                  ic_common_header.h \
                  ic_debug.h \
                  ic_dyn_array.h \
                  ic_bitmap.h \
                  ic_err.h \
                  ic_mc.h \
                  ic_poll_set.h \
                  ic_port.h \
                  ic_protocol_support.h \
		  ic_ssl.h \
		  ic_string.h \
		  ic_threadpool.h \
                  ic_hashtable.h

noinst_HEADERS    = ic_base64.h \
                    ic_protocol_support.h \
                    ic_common.h \
                    ic_config_reader.h \
                    ic_sock_buf.h \
                    ic_hashtable_itr.h \
		    ic_hashtable_private.h
