## Copyright (C) 2007-2011 iClaustron AB
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; version 2 of the License.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

include_HEADERS = ic_apic.h \
                  ic_apic_data.h \
                  ic_apic_load_cfg.h \
                  ic_apic_acs.h \
                  ic_apic_rcs.h \
                  ic_apid.h \
                  ic_apid_datatypes.h \
                  ic_apid_hidden.h \
                  ic_apid_inline.h \
                  ic_base_header.h \
                  ic_bitmap.h \
                  ic_connection.h \
                  ic_debug.h \
                  ic_dyn_array.h \
                  ic_err.h \
                  ic_hashtable.h \
                  ic_hw_info.h \
                  ic_linked_list.h \
                  ic_mc.h \
                  ic_parse_connectstring.h \
                  ic_poll_set.h \
                  ic_port.h \
                  ic_protocol_support.h \
		  ic_ssl.h \
		  ic_string.h \
		  ic_threadpool.h

noinst_HEADERS    = ic_base64.h \
                    ic_proto_str.h \
                    ic_protocol_support.h \
                    ic_pcntrl_proto.h \
                    ic_config_reader.h \
                    ic_sock_buf.h \
                    ic_hashtable_itr.h \
		    ic_hashtable_private.h \
		    ic_lex_support.h \
                    ic_readline.h
